@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-15T01:02:38Z",
+  "timestamp" : "2022-06-15T08:16:04Z",
   "count_outdated" : 336,
   "uniques_outdated" : 180,
-  "count" : 365,
-  "uniques" : 197,
+  "count" : 366,
+  "uniques" : 198,
   "clones" : [
     {
       "timestamp": "2022-06-01T00:00:00Z",
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 5 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
+    },
+    {
+      "timestamp": "2022-06-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
