@@ -1,5 +1,5 @@
 {
-  "count": 29,
+  "count": 30,
   "uniques": 4,
   "clones": [
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-06-14T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-06-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
