@@ -1,3 +1,10 @@
+2022-06-15T08:16:04Z:
+* notice: last 14d: unq all: 4 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 180 336 / 197 365
+* notice: next accum: outdated-unq outdated-all / unq all: 180 336 / 198 366
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-15]
+
 2022-06-15T01:02:38Z:
 * notice: last 14d: unq all: 4 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 177 332 / 195 361
